# abr_control

./: .codecov.yml  .gitignore  .nengobones.yml  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_cython.py
.ci/: conda.sh  static.sh  test.sh
.templates/: LICENSE.rst.template
abr_control/: .controllers.swo  __init__.py  sandbox.py  version.py
abr_control/_vendor/: README.rst  __init__.py
abr_control/arms/: __init__.py  base_config.py  mujoco_config.py  robot_config.py
abr_control/controllers/: __init__.py  avoid_joint_limits.py  avoid_obstacles.py  controller.py  damping.py  dynamic_floating.py  float.py  floating.py  floating_joint.py  floating_task.py  joint.py  keeplearningsolver.py  osc.py  osc_adaptive.py  osc_dynadapt.py  osc_kinadapt.py  osc_kinadapt2.py  osc_kinadapt3.py  osc_kinadapt4.py  osc_kinadapt5.py  osc_kinadapt6.py  osc_kinadapt7.py  osc_obstacles.py  osc_robust.py  reach.JEETux.cossin.separating_M1.py  reach.cossin.py  reach.py  reach.separating_M1.08302016.py  (+5 more)
abr_control/interfaces/jaco2/RS485_Comm_Example/sandbox/: CMakeLists.txt  KeosComm.cpp  KeosComm.h  KeosType.h  RS485ExampleUbuntu.cpp  RS485_example.cpp  a.out  example.cpp  make_rel.sh  serial_test.cpp  usbConnect.cpp  usbConnect.h
abr_control/interfaces/jaco2/RS485_Comm_Example/sandbox/hack_demo/: jaco2_rs485.cpp  jaco2_rs485.h
examples/: threelink_pygame_dmps.py  threelink_pygame_obstacle_avoidance.py  threelink_pygame_target_move.py  timing_plots.py
src/: jaco2_ctrl.py
(+744 files in other folders)
